--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/coordinator"
-    tools:context="com.example.titomi.workertrackerloginmodule.ReportModule.ReportActivity"
     android:orientation="vertical">
+    tools:context="com.example.titomi.workertrackerloginmodule.ReportModule.ReportActivity"
 
     <include
         layout="@layout/main_toolbar"
@@ -19,10 +19,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="5dp"
             android:descendantFocusability="beforeDescendants"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -54,8 +54,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:inputType="none"
                 android:editable="false"
+                android:inputType="none"
 
                 android:singleLine="true" />
 
@@ -72,9 +72,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:editable="false"
                 android:inputType="none"
-                android:singleLine="true"
-                android:editable="false"/>
+                android:singleLine="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -89,9 +89,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:editable="false"
                 android:inputType="none"
-                android:singleLine="true"
-                android:editable="false"/>
+                android:singleLine="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -115,9 +115,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:inputType=""
-                android:enabled="false"
                 android:editable="false"
+                android:enabled="false"
+                android:inputType=""
 
                 android:singleLine="true" />
 
@@ -134,20 +134,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:editable="false"
                 android:inputType="none"
-                android:singleLine="true"
-                android:editable="false"/>
+                android:singleLine="true" />
 
 
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnCount="3"
-                android:rowCount="2"
+                android:layout_marginBottom="10dp"
                 android:alignmentMode="alignBounds"
+                android:columnCount="3"
 
-                android:useDefaultMargins="true"
-                android:layout_marginBottom="10dp">
+                android:rowCount="2"
+                android:useDefaultMargins="true">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -157,9 +157,9 @@
                     android:textSize="12sp"
                     />
                 <ProgressBar
+                    android:id="@+id/lgaLoading"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:id="@+id/lgaLoading"
 
                     android:visibility="invisible"
                     />
@@ -175,16 +175,16 @@
                     android:id="@+id/state"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:inputType="none"
                     android:editable="false"
+                    android:inputType="none"
 
                     />
 
 
                 <TextView
+                    android:id="@+id/view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/view"
                     android:text=""
                     android:visibility="invisible"
                     />
@@ -194,8 +194,8 @@
                     android:id="@+id/lga"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:inputType="none"
                     android:editable="false"
+                    android:inputType="none"
 
                     />
 
@@ -216,9 +216,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                android:editable="false"
                 android:inputType="none"
-                android:singleLine="true"
-                android:editable="false"/>
+                android:singleLine="true" />
 
 
             <TextView
@@ -234,8 +234,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:inputType="none"
                 android:editable="false"
+                android:inputType="none"
                 android:singleLine="true" />
 
 
@@ -253,49 +253,49 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:inputType="none"
                 android:editable="false"
+                android:inputType="none"
                 android:singleLine="true" />
 
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:rowCount="2"
-                android:columnCount="2"
+                android:layout_marginBottom="20dp"
                 android:alignmentMode="alignBounds"
-                android:layout_marginBottom="20dp">
+                android:columnCount="2"
+                android:rowCount="2">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    android:layout_gravity="top|start"
                     android:text="Date assigned:"
                     android:textColor="@color/black"
-                    android:textSize="12sp"
 
 
-                    android:layout_gravity="top|start"/>
+                    android:textSize="12sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
+                    android:layout_gravity="top|center"
                     android:text="Time:"
                     android:textColor="@color/black"
-                    android:textSize="12sp"
-                    android:layout_gravity="top|center"/>
+                    android:textSize="12sp" />
 
                 <EditText
                     android:id="@+id/dateText"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
+                    android:layout_gravity="bottom|start"
                     android:drawableEnd="@android:drawable/arrow_down_float"
-                    android:hint="@string/date_format"
                     android:editable="false"
                     android:focusable="false"
-                    android:inputType="none"
-                    android:layout_gravity="bottom|start"/>
+                    android:gravity="center_horizontal"
+                    android:hint="@string/date_format"
+                    android:inputType="none" />
 
 
 
@@ -304,14 +304,14 @@
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
 
+                    android:layout_gravity="center|bottom"
                     android:drawableEnd="@android:drawable/arrow_down_float"
                     android:editable="false"
+                    android:focusable="false"
                     android:gravity="center_horizontal"
                     android:hint="@string/date_format"
-                    android:focusable="false"
-                    android:inputType="none"
 
-                    android:layout_gravity="center|bottom"/>
+                    android:inputType="none" />
 
             </GridLayout>
 
@@ -320,16 +320,16 @@
             <Button
                 android:id="@+id/clockOutBut"
 
-                android:background="@color/colorPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
-                android:padding="2dp"
-                android:textColor="@color/white"
+                android:background="@color/colorPrimary"
                 android:elevation="@dimen/cardview_default_elevation"
+                android:padding="2dp"
                 android:tag="add"
-                android:text="@string/clockOut" />
+                android:text="@string/clockOut"
+                android:textColor="@color/white" />
         </LinearLayout>
     </ScrollView>
 
@@ -340,11 +340,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        app:menu_fab_size="normal"
         app:layout_behavior="com.example.titomi.workertrackerloginmodule.FloatingActionMenuBehavior"
         app:menu_backgroundColor="@android:color/transparent"
         app:menu_colorNormal="@color/colorPrimaryLight"
         app:menu_fab_label=""
+        app:menu_fab_size="normal"
         app:menu_labels_textColor="@color/colorfabText"
         app:menu_openDirection="up"
         app:menu_showShadow="true">
