--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -9,9 +9,7 @@
     tools:context="com.example.titomi.workertrackerloginmodule.ReportModule.ReportActivity"
     android:orientation="vertical">
 
-    <include
-        layout="@layout/main_toolbar"
-        />
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -361,29 +359,64 @@
             </GridLayout>
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Challenges"
+                android:textColor="@color/black"
+
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/challengesEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Media"
+                android:layout_marginBottom="10dp"
+                android:inputType="none"
+                android:editable="false"
+                android:singleLine="true" />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Media (Click on the + button to add media)"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 android:background="@drawable/line"/>
 
-
-
-
-            <Button
-                android:id="@+id/clockOutBut"
-
-                android:background="@color/colorPrimary"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
-                android:padding="2dp"
-                android:textColor="@color/white"
-                android:elevation="@dimen/cardview_default_elevation"
-                android:tag="add"
-                android:text="@string/clockOut" />
+                android:orientation="vertical"
+                android:id="@+id/mediaLayout">
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:id="@+id/imagesLayout"/>
+
+
+            </HorizontalScrollView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Play video"
+                    android:drawableStart="@drawable/ic_videocam_white_24dp"
+                    android:background="@color/gray"
+                    android:gravity="center_vertical"
+                    android:id="@+id/playVideoText"
+                    android:visibility="gone"/>
+            </LinearLayout>
+
+
+
+
+
         </LinearLayout>
     </ScrollView>
 
@@ -411,28 +444,37 @@
             android:overScrollMode="always"
             android:visibility="gone"
             app:fabSize="mini"
-            app:srcCompat="@drawable/remove_photo" />
+            android:src="@drawable/remove_photo" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fabSize="mini"
-            app:srcCompat="@drawable/ic_photo_camera" />
+            android:src="@drawable/ic_photo_camera" />
+
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fabSize="mini"
+            android:src="@drawable/ic_videocam_white_24dp" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_record"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fabSize="mini"
-            app:srcCompat="@drawable/ic_mic" />
+            android:src="@drawable/ic_mic" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:fabSize="mini"
-            app:srcCompat="@drawable/ic_send" />
+
+            android:src="@drawable/ic_send" />
     </com.github.clans.fab.FloatingActionMenu>
 
 
