--- a/app/src/main/res/layout/activity_users_login_trival.xml
+++ b/app/src/main/res/layout/activity_users_login_trival.xml
@@ -6,12 +6,21 @@
     android:layout_height="match_parent"
     tools:context="com.example.titomi.workertrackerloginmodule.LoginActivity">
 
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="80dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="140dp"
+        android:src="@drawable/app_logo"
+        android:id="@+id/app_logo"/>
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_below="@id/app_logo"
+        android:layout_centerHorizontal="true"
         android:id="@+id/progressBar"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
     <EditText
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
