--- a/app/src/main/res/layout/report_image_single_item_with_delete_button.xml
+++ b/app/src/main/res/layout/report_image_single_item_with_delete_button.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="100dp"
     android:layout_height="100dp">
 
@@ -10,7 +11,7 @@
 
         android:background="@color/colorPrimary"
         >
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/gray"
@@ -20,8 +21,17 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:id="@+id/reportImage"
+                android:src="@drawable/app_logo"
+                android:layout_gravity="center_vertical"
                 />
-        </LinearLayout>
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_vertical"
+                android:id="@+id/delete"
+                app:srcCompat="@drawable/ic_cancel_black_24dp"
+                android:layout_alignParentEnd="true"/>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
