--- a/app/src/main/res/layout/inventory_fragment.xml
+++ b/app/src/main/res/layout/inventory_fragment.xml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_to_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/swipe_to_refresh_layout"
     tools:context="com.example.titomi.workertrackerloginmodule.DashboardFragments.FragmentInventory">
 
-    <ListView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listInventoryGraphView"/>
+        android:layout_height="match_parent">
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/barChartInvt"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_below="@id/progressBar"
+            android:layout_marginTop="20dp" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone" />
+    </RelativeLayout>
 
 
 </android.support.v4.widget.SwipeRefreshLayout>
