--- a/app/src/main/res/layout/attendance_fragment.xml
+++ b/app/src/main/res/layout/attendance_fragment.xml
@@ -10,18 +10,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ProgressBar
+            android:id="@+id/progressBarAttend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone" />
+
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/barChart"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="250dp"
             android:layout_below="@id/small_task_table"
-            android:layout_marginTop="20dp"></com.github.mikephil.charting.charts.BarChart>
+            android:layout_marginTop="20dp" />
 
         <TableLayout
             android:id="@+id/small_task_table"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/piechart"
+            android:layout_below="@id/progressBarAttend"
             android:showDividers="beginning"
             android:stretchColumns="1">
 
