--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/graylight"
     android:orientation="vertical"
-    tools:context="com.example.titomi.workertrackerloginmodule.userProfile.UserProfileActivity">
+    tools:context="com.example.titomi.workertrackerloginmodule.user_profile.UserProfileActivity">
 
     <include layout="@layout/main_toolbar" />
     <RelativeLayout
