--- a/app/src/main/res/layout/activity_add_remit.xml
+++ b/app/src/main/res/layout/activity_add_remit.xml
@@ -43,6 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/amountEdit"
+                android:inputType="numberDecimal"
                 android:layout_marginBottom="20dp"/>
 
             <TextView
