--- a/app/src/main/res/layout/inventory_fragment.xml
+++ b/app/src/main/res/layout/inventory_fragment.xml
@@ -37,7 +37,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/balanceColor" />
+                    android:background="@color/red" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -52,7 +52,7 @@
                 <TextView
                     android:layout_width="18dp"
                     android:layout_height="wrap_content"
-                    android:background="@color/quantitySoldColor" />
+                    android:background="@color/md_blue_800" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -67,7 +67,7 @@
                 <TextView
                     android:layout_width="18dp"
                     android:layout_height="wrap_content"
-                    android:background="@color/quantityColor" />
+                    android:background="@color/md_light_green_A400" />
 
                 <TextView
                     android:layout_width="wrap_content"
