--- a/app/src/main/res/layout-v21/task_listing_single_item_layout.xml
+++ b/app/src/main/res/layout-v21/task_listing_single_item_layout.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical" android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="20dp"
+    android:paddingTop="5dp"
+    android:layout_margin="5dp"
+    android:padding="5dp">
 <android.support.v7.widget.CardView android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -273,3 +281,4 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
+</LinearLayout>
