--- a/app/src/main/res/layout/task_listing_single_item_layout.xml
+++ b/app/src/main/res/layout/task_listing_single_item_layout.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.CardView android:layout_width="match_parent"
+<LinearLayout   xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    app:cardCornerRadius="5dp"
-    android:layout_marginTop="10dp"
+    android:orientation="vertical"
 
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="20dp"
+    android:paddingTop="5dp"
+    android:layout_margin="5dp"
+    android:padding="5dp"
+    >
+
+    <android.support.v7.widget.CardView android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+
+        app:cardCornerRadius="5dp"
+        android:layout_marginTop="10dp"
+        android:paddingTop="50dp"
+
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="2dp">
+
+            android:padding="5dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -273,3 +288,6 @@
                 android:gravity="end"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+</LinearLayout>
+
