--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_task_chart"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.titomi.workertrackerloginmodule.dashboard_fragments.FragmentTask">
@@ -12,10 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ProgressBar
+            android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:id="@+id/progressBar"
             android:visibility="gone"
 
             />
@@ -30,26 +31,26 @@
             android:id="@+id/small_task_table"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:stretchColumns="1"
             android:layout_below="@id/piechart"
-            android:showDividers="beginning">
+            android:showDividers="beginning"
+            android:stretchColumns="1">
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:padding="3dp"
                     android:layout_column="1"
+                    android:padding="3dp"
                     android:text="Total Assigned Task "
                     android:textStyle="bold" />
 
                 <TextView
 
-                    android:padding="3dp"
+                    android:id="@+id/taskAssignedCount"
                     android:gravity="end"
-                    android:textStyle="bold"
-                    android:id="@+id/taskAssignedCount"/>
+                    android:padding="3dp"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow
@@ -57,17 +58,17 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:padding="3dp"
                     android:layout_column="1"
+                    android:padding="3dp"
                     android:text="Total Executed Task"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:padding="3dp"
+                    android:id="@+id/executedTaskCount"
 
                     android:gravity="end"
-                    android:textStyle="bold"
-                    android:id="@+id/executedTaskCount"/>
+                    android:padding="3dp"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow
@@ -75,20 +76,20 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:padding="3dp"
                     android:layout_column="1"
+                    android:padding="3dp"
                     android:text="Unexecuted Task"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:padding="3dp"
+                    android:id="@+id/unexecutedTasksCount"
                     android:gravity="end"
 
-                    android:textStyle="bold"
-                    android:id="@+id/unexecutedTasksCount"/>
+                    android:padding="3dp"
+                    android:textStyle="bold" />
             </TableRow>
         </TableLayout>
 
     </RelativeLayout>
 
-</ScrollView>
+</android.support.v4.widget.SwipeRefreshLayout>
