--- a/app/src/main/res/layout/activity_users_login_trival.xml
+++ b/app/src/main/res/layout/activity_users_login_trival.xml
@@ -3,15 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.titomi.workertrackerloginmodule.LoginActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.titomi.workertrackerloginmodule.LoginActivity"
+    >
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/bg2"
+            android:id="@+id/background"
+            android:scaleType="centerCrop"/>
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/app_logo"
         android:layout_width="150dp"
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="160dp"
         android:src="@drawable/app_logo" />
     <ProgressBar
         android:id="@+id/progressBar"
@@ -21,6 +33,15 @@
         android:layout_centerHorizontal="true"
 
         android:visibility="gone"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Incorrect user credentials"
+        android:layout_below="@id/progressBar"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/red"
+        android:visibility="gone"
+        android:id="@+id/loginInfo"/>
     <EditText
         android:id="@+id/line_id"
         android:layout_width="200dp"
@@ -39,6 +60,8 @@
         android:layout_below="@id/line_id"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:text="Login"/>
+
 
 </RelativeLayout>
